Moving horizon to Polymer

--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -18,6 +18,7 @@
       </div>
       <div id="newuiVideo" class="full-height">
         <rov-video id="videoElement"></rov-video>
+        <rov-horizon id="horizon"></rov-horizon>
       </div>
       <div id="newuiControlpad">
         <div class="newui-item" id="heading-item">
