connect depth to socket

--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="/plugin/new-ui/time.html" />
 <link rel="import" href="/plugin/new-ui/compass.html" />
-<link rel="import" href="/plugin/new-ui/video.html" />
+<link rel="import" href="/plugin/new-ui/depth.html" />
 
 <polymer-element name="x-newui">
   <template>
@@ -32,7 +32,8 @@
         <div class="newui-item" id="depth-item">
           <div class="center">
             <H4>Depth</H4>
-            <div id="newui-depth" class="center control"></div>
+            <!--<div id="newui-depth" class="center control"></div>-->
+            <newui-depth id="newui-depth" class="center control"></newui-depth>
           </div>
         </div>
         <div class="newui-item" id="throttle-item">
