--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -2,6 +2,7 @@
 <link rel="import" href="/plugin/new-ui/time.html" />
 <link rel="import" href="/plugin/new-ui/compass.html" />
 <link rel="import" href="/plugin/new-ui/depth.html" />
+<link rel="import" href="/plugin/new-ui/switches.html" />
 
 <polymer-element name="x-newui">
   <template>
@@ -45,7 +46,8 @@
         <div class="newui-item" id="switches-item">
           <div class="center">
             <H4>Switches</H4>
-            <div id="newui-switches" class="center control"></div>
+            <!--<div id="newui-switches" class="center control"></div>-->
+            <newui-switches id="newui-switches" class="center control"></newui-switches>
           </div>
         </div>
         <div class="newui-item" id="time-item">
