--- a/src/plugins/new-ui/public/depth.html
+++ b/src/plugins/new-ui/public/depth.html
@@ -36,8 +36,8 @@
         padding: 0;
       }
     
-      #depth-change-up { padding-left: 1em }
-      #depth-change-down { padding-right: 1em }
+      #depthChangeUp { padding-left: 1em }
+      #depthChangeDown { padding-right: 1em }
       #depth-change-value { vertical-align: middle; font-size: 1.4em }
       #depth-change-unit { margin-top: -6px; }
       .depth-change-indicator { width: 20px; height: 20px }
