--- a/src/plugins/new-ui/public/switches.html
+++ b/src/plugins/new-ui/public/switches.html
@@ -1,9 +1,12 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <polymer-element name="newui-switches">
   <template>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <style type="text/css">
-      #switches-container {
+      #switchesContainer {
         display: table;
         border-collapse: collapse;
       }
