Fix spelling in navdata from deapth to depth'

--- a/src/plugins/new-ui/public/depth.html
+++ b/src/plugins/new-ui/public/depth.html
@@ -124,8 +124,8 @@
           setInterval(update, 1000);
 
           socket.on('navdata', function (data) {
-            if (data.deapth) {
-              currentDepth = data.deapth;
+            if (data.depth) {
+              currentDepth = data.depth;
             }
           });
         }
