--- a/src/static/webcomponents/horizon/horizon.html
+++ b/src/static/webcomponents/horizon/horizon.html
@@ -74,7 +74,7 @@
           this.setValues({
             roll: data.roll * Math.PI / 180,
             pitch: data.pitch * Math.PI / 180,
-            altitude: data.deapth,
+            altitude: data.depth,
             speed: data.thrust
           });
           this.draw();
