--- a/src/plugins/new-ui/public/depth.html
+++ b/src/plugins/new-ui/public/depth.html
@@ -8,8 +8,8 @@
       #depthContainer { width: 100%;
       margin-bottom: -18px}
       #depth {
-        font-size: 2.4em;
-        margin-bottom: -6px;
+        font-size: 2.9em;
+        font-weight: bold;
       }
       .depth-line-container,
       #depth-change-container {
