--- a/src/plugins/new-ui/public/depth.html
+++ b/src/plugins/new-ui/public/depth.html
@@ -47,7 +47,7 @@
       <div id="depth" class="center text-center">
         {{depth}}
       </div>
-      <div id="depth-unit" class="center text-center unit">(m)</div>
+      <div id="depth-unit" class="center text-center unit">m</div>
       <div class="depth-line-container">
         <span class="depth-line"><hr /></span>
         <span class="depth-line-text">VSI</span>
