--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -26,7 +26,7 @@
           <div class="center">
             <H4>Heading</H4>
             <div id="newui-compass" class="center control">
-              <newui-compass heading="200" bearing="180"></newui-compass>
+              <newui-compass class="center" heading="200" bearing="180"></newui-compass>
             </div>
           </div>
         </div>
@@ -46,8 +46,9 @@
         <div class="newui-item" id="switches-item">
           <div class="center">
             <H4>Switches</H4>
-            <!--<div id="newui-switches" class="center control"></div>-->
-            <newui-switches id="newui-switches" class="center control"></newui-switches>
+            <div id="newui-switches" class="center control">
+              <newui-switches id="newui-switches" class="center"></newui-switches>
+            </div>
           </div>
         </div>
         <div class="newui-item" id="time-item">
