--- a/src/plugins/new-ui/public/switches.html
+++ b/src/plugins/new-ui/public/switches.html
@@ -60,13 +60,14 @@
       Polymer({
         lastPing: new Date(),
         switches: {
-          COM: {switchable: false, state: true},
-          GPD: {switchable: false, state: false},
-          TNK: {switchable: false, state: false},
-          DLK: {switchable: false, state: false},
-          HLK: {switchable: false, state: false},
-          LSR: {switchable: false, state: true},
-          LED: {switchable: false, state: false}
+          COM: {switchable: false, state: false},
+          GPD: {switchable: false, state: false, message: { enabled: 'gamepad.connected', disabled: 'gamepad.disconnected'} },
+          TNK: {switchable: false, state: false, message: 'tankControl'},
+          DLK: {switchable: false, state: false, message: 'rovpilot.depthHold'},
+          HLK: {switchable: false, state: false, message: 'rovpilot.headingHold'},
+          LSR: {switchable: false, state: false, message: 'rovpilot.laser' },
+          LED: {switchable: false, state: false},
+          ESC: {switchable: false, state: true, message: 'rovpilot.esc' }
         },
         update: function() {
           for (var aSwitch in this.switches) {
@@ -85,40 +86,33 @@
         ready: function() {
           var self = this;
 
-          window.cockpit.on('gamepad.connected', function () {
-            self.switches.GPD.state = true;
-            self.update();
-          });
-          window.cockpit.on('gamepad.disconnected', function () {
-            self.switches.GPD.state = false;
-            self.update();
-          });
-          window.cockpit.on('tankControl.enabled', function () {
-            self.switches.TNK.state = true;
-            self.update();
-          });
-          window.cockpit.on('tankControl.disabled', function () {
-            self.switches.TNK.state = false;
-            self.update();
-          });
-          window.cockpit.on('rovpilot.depthHold.enabled', function () {
-            self.switches.DLK.state = true;
-            self.update();
-          });
-          window.cockpit.on('rovpilot.depthHold.disabled', function () {
-            self.switches.DLK.state = false;
-            self.update();
-          });
-          window.cockpit.on('rovpilot.headingHold.enabled', function () {
-            self.switches.HLK.state = true;
-            self.update();
-          });
-          window.cockpit.on('rovpilot.headingHold.disabled', function () {
-            self.switches.HLK.state = false;
-            self.update();
-          });
-
           socket.on('status', function() { self.lastPing = new Date(); })
+        },
+        registerListeners: function(aSwitch) {
+          var self = this;
+          // register the enabled/disabled messages
+          if (self.switches[aSwitch].message){
+            var enabledKey;
+            var disabledKey;
+            if (typeof self.switches[aSwitch].message == 'string') {
+              enabledKey = self.switches[aSwitch].message + '.enabled';
+              disabledKey = self.switches[aSwitch].message + '.disabled';
+            }
+            else {
+              enabledKey = self.switches[aSwitch].message.enabled;
+              disabledKey = self.switches[aSwitch].message.disabled;
+            }
+            window.cockpit.on(enabledKey, function () {
+              self.switches[aSwitch].state = true;
+              self.update();
+            });
+            window.cockpit.on(disabledKey, function () {
+              self.switches[aSwitch].state = false;
+              self.update();
+            });
+
+          }
+
         },
         domReady: function() {
           var self = this;
@@ -139,10 +133,11 @@
                 self.onSwitch(property);
               })
             }
+            this.registerListeners(aSwitch);
+
           }
 
           self.update();
-
           setInterval(function() {
             var delay = new Date() - self.lastPing;
             self.switches.COM.state = delay <= 3000;
