--- a/src/plugins/new-ui/public/new-ui.html
+++ b/src/plugins/new-ui/public/new-ui.html
@@ -26,7 +26,7 @@
           <div class="center">
             <H4>Heading</H4>
             <div id="newui-compass" class="center control">
-              <newui-compass class="center" heading="200" bearing="180"></newui-compass>
+              <newui-compass class="center" heading="0"></newui-compass>
             </div>
           </div>
         </div>
