--- a/src/plugins/new-ui/public/time.html
+++ b/src/plugins/new-ui/public/time.html
@@ -58,36 +58,18 @@
 
   </template>
   <script>
-    var socket = io.connect();
     Polymer({
       time: new Date().toLocaleTimeString(),
       runtime: "00:00:00",
       ready: function() {
         var self = this;
 
-        var update = function () {
-          self.time = new Date().toLocaleTimeString()
-        };
-        var formatRuntime = function (s) {
-          function addZ(n) {
-            return (n < 10 ? '0' : '') + n;
-          }
-          var ms = s % 1000;
-          s = (s - ms) / 1000;
-          var secs = s % 60;
-          s = (s - secs) / 60;
-          var mins = s % 60;
-          var hrs = (s - mins) / 60;
-          return addZ(hrs) + ':' + addZ(mins) + ':' + addZ(secs);  // + '.' + ms;
-        };
-
-        setInterval(update, 1000);
-
-        socket.on('status', function(data) {
-          if ('time' in data) {
-            self.runtime = formatRuntime(data.time);
-          }
+        window.cockpit.on('capestatus.time.time', function(time) {
+          self.time = time.formatted;
         });
+        window.cockpit.on('capestatus.time.runtime', function(runtime) {
+          self.runtime = runtime.formatted;
+        })
       }
     });
   </script>
