--- a/src/plugins/new-ui/public/compass.html
+++ b/src/plugins/new-ui/public/compass.html
@@ -35,7 +35,7 @@
       <rect id="rect4953" transform="matrix(-0.70710678,-0.70710678,0.70710678,-0.70710678,472.5,1140.7159)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5"/>
       <rect id="rect4955" transform="matrix(-0.70710678,0.70710678,-0.70710678,-0.70710678,1140.7159,472.5)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5"/>
       <rect id="rect4957" transform="matrix(0.70710678,0.70710678,-0.70710678,0.70710678,472.5,-195.71591)" fill="{{ options.bezel }}" height="30" width="10" y="96" x="467.5"/>
-      <g id="indicators" font-size="100px" font-family="Sans" style="word-spacing:0;letter-spacing:0;" letter-spacing="0" word-spacing="0" font-weight="bold">
+      <g id="indicators" font-size="72px" font-family="Sans" style="word-spacing:0;letter-spacing:0;" letter-spacing="0" word-spacing="0" font-weight="bold">
       <text id="indicator_n" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" line-height="125%" y="90.702766" x="471.9191">N</text>
       <text id="text4961" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(-1,0,0,-1,943.74133,945)" line-height="125%" y="80.803268" x="471.90582">S</text>
       <text id="text4965" fill="{{ options.bezel }}" style="text-anchor:middle;text-align:center;" transform="matrix(0,1,-1,0,0,0)" line-height="125%" y="-864.25293" x="471.84961">E</text>
@@ -48,11 +48,7 @@
       </g>
       <text id="heading" fill="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="250px" letter-spacing="0" line-height="125%" word-spacing="0" y="578.01447" x="460.67117" font-weight="bold">{{heading}}</text>
       <g id="indicator" stroke="{{ options.indicator }}" fill="{{ options.indicator }}" transform="translate(17.197253,32.920483)">
-      <path id="path4064" stroke-width="0.142416" d="m455.69,101.81c-0.036-0.01-0.036-0.012,0.014-0.118l0.05-0.107v0.12c0,0.065-0.005,0.118-0.013,0.117-0.006,0-0.03-0.007-0.05-0.013z"/>
-      <path id="path4066" stroke-width="5" fill="none" d="M456.13,192.2v-91.798l-62.43,130.28z"/>
-      <path id="path4068" stroke-width="5" fill="none" d="M456.13,192.2,522.54,230.68,456.13,100.4z"/>
-      <path id="path4070" stroke-width=".516.713" d="m396.29,227.73c0-0.2,57.356-120.04,58.458-122.14,0.51-0.972,0.524,0.132,0.536,42.497l0.013,43.496-28.863,17.774c-15.873,9.775-29.15,17.956-29.502,18.18-0.353,0.223-0.642,0.31-0.642,0.195z"/>
-      <path id="path4072" stroke-width="0.039216" d="m455.29,105.12c-0.017-0.023-0.068-0.07-0.114-0.1-0.078-0.056-0.093-0.06-0.204-0.076l-0.12-0.017,0.233-0.487,0.234-0.488,0.004,0.3c0.003,0.166,0.003,0.438,0,0.606l-0.003,0.305-0.03-0.045z"/>
+        <rect id="rect4935-9" height="76.511" width="15" y="85.057" x="450.31" stroke-width="3"/>
       </g>
       <circle id="bearing" fill="{{ options.bearing }}" cy="80" cx="472.5" r="20"/>
       </g>
