Moving new-ui into ui-plugins

--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="/plugin/new-ui/time.html" />
-<link rel="import" href="/plugin/new-ui/compass.html" />
-<link rel="import" href="/plugin/new-ui/depth.html" />
-<link rel="import" href="/plugin/new-ui/switches.html" />
-<link rel="import" href="/plugin/new-ui/power.html" />
+<link rel="import" href="/ui-plugin/new-ui/time.html" />
+<link rel="import" href="/ui-plugin/new-ui/compass.html" />
+<link rel="import" href="/ui-plugin/new-ui/depth.html" />
+<link rel="import" href="/ui-plugin/new-ui/switches.html" />
+<link rel="import" href="/ui-plugin/new-ui/power.html" />
 
 <polymer-element name="x-newui">
   <template>
